# onvif

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_gsoap.sh  onvif.conf  onvif.json  wsa5_bck.h
example/: main.c
general_src/common/: check_common.h  cjson_common.h  log.c  log.h
general_src/list/: list.c  list.h
gsoap/: DeviceBinding.nsmap  ImagingBinding.nsmap  dom.c  gsoap.h  soapClient.c  soapClientLib.c  soapServer.c  soapServerLib.c  soapStub.h  stdsoap2.c  stdsoap2.h  wsdd.nsmap
include/: onvif.h  onvif_common.h
src/: auth.c  auth.h  cjson_to_struct.c  cjson_to_struct.h  config.c  config.h  onvif.c  onvif.h  onvif_auth.c  onvif_auth.h  onvif_conf.c  onvif_conf.h  onvif_event.c  onvif_event.h  onvif_oper.c  onvif_oper.h  onvif_operation.c  onvif_operation.h  soap_common.h  soap_device_io.c  soap_device_mgmt.c  soap_display.c  soap_event.c  soap_imaging.c  soap_media_v10.c  soap_media_v20.c  soap_ptz.c  soap_receiver.c  soap_recording.c  soap_remote_discorvery.c  soap_replay.c  soap_search.c  struct_to_cjson.c  struct_to_cjson.h
src/soap/: soap_analytics.c  soap_common.h  soap_device_io.c  soap_device_mgmt.c  soap_display.c  soap_event.c  soap_imaging.c  soap_media_v10.c  soap_media_v20.c  soap_ptz.c  soap_receiver.c  soap_recording.c  soap_remote_discorvery.c  soap_replay.c  soap_search.c
third_src/easylogger/: elog.c  elog.h  elog_cfg.h  elog_file.c  elog_file.h  elog_port.c
